--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -13,7 +13,7 @@
   --ifm-color-primary-light: #a316df;
   --ifm-color-primary-lighter: #ab1de8;
   --ifm-color-primary-lightest: #b12bea;
-  --ifm-background-color: #fff6fe;
+  --ifm-background-color: #fffcff;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
