Minor formatting changes

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -34,3 +34,7 @@
   --ifm-background-color: #232024;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
+
+.react-md p {
+  margin: 0px;
+}
