--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -43,31 +43,24 @@
 /* Tab background */
 .tabs-container {
   background-color: rgba(0, 0, 0, 0.05);
-  padding: 0px 5px;
-  border-radius: 15px;
+  border-radius: var(--ifm-global-radius);
 }
 [data-theme='dark'] .tabs-container {
   background-color: rgb(0, 0, 0, 0.1);
 }
-
-/* Side by side char pages */
-.flex {
-  display: flex;
-  flex-direction: row;
-  align-items: stretch;
+div[role="tabpanel"] {
+  padding: 0px 10px 10px;
 }
 
-.flex > *:nth-child(odd) {
-  width: 40%;
-  padding-right: 10px;
+/* Side by side char pages */
+.talent-columns {
+  display: grid;
+  grid-template-columns: 4fr 6fr;
+  gap: 10px;
 }
 
 @media screen and (max-width: 1500px) {
-  .flex {
-    flex-direction: column;
-  }
-  .flex > *:nth-child(odd) {
-    width: auto;
-    padding-left: 0px;
+  .talent-columns {
+    grid-template-columns: 1fr;
   }
 }
