Add version numbers to added dates

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -68,3 +68,11 @@ div[role="tabpanel"] {
     grid-template-columns: 1fr;
   }
 }
+
+/* Version highlight */
+.version-hl-error {
+  color: var(--ifm-color-danger-dark);
+}
+.version-hl-warning {
+  color: var(--ifm-color-warning-dark);
+}
